[package]
name = "short-link"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
dotenv = "0.15.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
    "cors"
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
